RESOLVED FIXED248798
Regression(255052@main) Unable to log into Marcus.com on iOS
https://bugs.webkit.org/show_bug.cgi?id=248798
Summary Regression(255052@main) Unable to log into Marcus.com on iOS
Chris Dumez
Reported 2022-12-05 15:55:42 PST
Unable to log into Marcus.com since 255052@main. It complains about being outside the USA.
Attachments
Chris Dumez
Comment 1 2022-12-05 15:56:34 PST
Chris Dumez
Comment 2 2022-12-05 16:00:28 PST
EWS
Comment 3 2022-12-06 07:31:24 PST
Committed 257407@main (3622b4c14b28): <https://commits.webkit.org/257407@main> Reviewed commits have been landed. Closing PR #7174 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.