Source/WebCore/page/Navigator.cpp
@@ -259,7 +259,10 @@ void Navigator::initializePluginAndMimeTypeArrays()
         return;
 
     auto* frame = this->frame();
-    if (!frame || !frame->page()) {
+    bool needsEmptyNavigatorPluginsQuirk = frame && frame->document() && frame->document()->quirks().shouldNavigatorPluginsBeEmpty();
+    if (!frame || !frame->page() || needsEmptyNavigatorPluginsQuirk) {
+        if (needsEmptyNavigatorPluginsQuirk)
+            frame->document()->addConsoleMessage(MessageSource::Other, MessageLevel::Info, "QUIRK: Navigator plugins / mimeTypes empty on marcus.com. More information at https://bugs.webkit.org/show_bug.cgi?id=248798"_s);
         m_plugins = DOMPluginArray::create(*this);
         m_mimeTypes = DOMMimeTypeArray::create(*this);
         return;
